# FastAPI-boilerplate

./: .env.sample  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
alembic/: env.py
api/core/: config.py  response_messages.py
api/db/: database.py
api/utils/: jwt_helpers.py  pagination.py  rate_limiter.py
api/v1/models/: __init__.py  notifications.py  profile.py  resource.py  user.py
api/v1/routes/: __init__.py  auth.py  google_auth.py  notification.py  notification_settings.py  profile.py  request_password.py  resource.py  user.py
api/v1/schemas/: auth.py  notification.py  notification_settings.py  profile.py  request_password_reset.py  resource.py  user.py
api/v1/services/: auth.py  google_oauth.py  notification.py  notification_settings.py  profile.py  request_pwd.py  resource.py  user.py
app/: main.py
app/api/models/: __init__.py  activity_logs.py  base_model.py  profile.py  user.py
app/api/repositories/: user.py
app/api/routes/: auth.py  main.py
app/api/schemas/: auth.py
app/api/services/: auth.py  user.py
app/api/v1/auth/: routes.py  schemas.py  services.py
app/core/: config.py  database.py  logger.py
app/core/base/: model.py  repository.py  schema.py
app/core/dependencies/: security.py
app/features/: router.py
app/features/auth/: jwt.py  models.py  password.py  repository.py  routes.py  schemas.py  service.py
tests/: conftest.py  test_auth.py  test_root.py
