[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "A simple FastAPI backend boilerplate, based on the HNG FastAPI Boilerplate"
authors = ["Franklin Ikeh <ikehfranklin06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
