[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "A simple FastAPI backend boilerplate, based on the HNG FastAPI Boilerplate"
authors = [{ name = "Franklin Ikeh", email = "ikehfranklin06@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"

dependencies = [
    "fastapi[standard]>=0.115.6,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "alembic>=1.14.0,<2",
    "itsdangerous>=2.2.0,<3",
    "python-jose>=3.3.0,<4",
    "psycopg2-binary>=2.9.10,<3",
    "passlib[bcrypt]>=1.7.4,<2",
    "pydantic-settings>=2.7.0,<3",
    "uuid7>=0.1.0,<0.2",
    "slowapi>=0.1.0,<0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.3,<0.9",
    "pytest>=8.3.4,<9",
]

[tool.uv]
default-groups = "all"
